@@ -1,14 +1,24 @@
+package com.example.demo.service.impl;
+
+import com.example.demo.model.Employee;
+import com.example.demo.model.SearchQueryRecord;
+import com.example.demo.repository.EmployeeSkillRepository;
+import com.example.demo.repository.SearchQueryRecordRepository;
+import com.example.demo.service.SearchQueryService;
+import org.springframework.stereotype.Service;
+
+import java.util.List;
+import java.util.stream.Collectors;
+
 @Service
 public class SearchQueryServiceImpl implements SearchQueryService {
 
-    private final SearchQueryRecordRepository repo;
+    private final SearchQueryRecordRepository searchQueryRecordRepository;
     private final EmployeeSkillRepository employeeSkillRepository;
 
-    public SearchQueryServiceImpl(
-            SearchQueryRecordRepository repo,
-            EmployeeSkillRepository employeeSkillRepository
-    ) {
-        this.repo = repo;
+    public SearchQueryServiceImpl(SearchQueryRecordRepository searchQueryRecordRepository,
+                                  EmployeeSkillRepository employeeSkillRepository) {
+        this.searchQueryRecordRepository = searchQueryRecordRepository;
         this.employeeSkillRepository = employeeSkillRepository;
     }
 
@@ -16,18 +26,18 @@ public class SearchQueryServiceImpl implements SearchQueryService {
     public List<Employee> searchEmployeesBySkills(List<String> skills, Long userId) {
 
         if (skills == null || skills.isEmpty()) {
-            throw new IllegalArgumentException("Skill list must not be empty");
+            throw new IllegalArgumentException("skills must not be empty");
         }
 
         List<String> normalized = skills.stream()
                 .map(s -> s.trim().toLowerCase())
                 .distinct()
-                .toList();
+                .collect(Collectors.toList());
 
         List<Employee> result =
                 employeeSkillRepository.findEmployeesByAllSkillNames(
                         normalized,
-                        normalized.size()
+                        (long) normalized.size()
                 );
 
         SearchQueryRecord record = new SearchQueryRecord();
@@ -35,7 +45,19 @@ public class SearchQueryServiceImpl implements SearchQueryService {
         record.setSkillsRequested(String.join(",", normalized));
         record.setResultsCount(result.size());
 
-        repo.save(record);
+        searchQueryRecordRepository.save(record);
+
         return result;
+    }
+
+    @Override
+    public SearchQueryRecord getQueryById(Long id) {
+        return searchQueryRecordRepository.findById(id)
+                .orElseThrow(() -> new IllegalArgumentException("Query not found"));
+    }
+
+    @Override
+    public List<SearchQueryRecord> getQueriesForUser(Long userId) {
+        return searchQueryRecordRepository.findBySearcherId(userId);
     }
 }
